# vllm.cpp

./: .clang-format  .environment.md  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  HANDSOFF.md  LICENSE  NOTICE  README.md  flake.nix
examples/: CMakeLists.txt
examples/bench/: bench_core.h  main.cpp
examples/cli/: main.cpp
examples/dequant_nvfp4/: main.cpp
examples/dump_container/: main.cpp  sha256.h
examples/quant_gemm_bench/: main.cpp
examples/server/: main.cpp
examples/tokenize/: main.cpp
tests/: CMakeLists.txt
tests/capi/: c_header_compile.c  test_capi.cpp  test_chat_prompt.cpp  test_dlopen.cpp
tests/examples/: test_bench.cpp
tests/fixtures/: qwen35_chat_template.jinja
tests/fixtures/lmcache/: key_agreement_fixtures.json  lmcache_fixtures.json
tests/fixtures/nvfp4_flashinfer_v025_gb10/: autotune_configs.json  manifest.json
tests/fixtures/scheduler_wave/: wave_script_oracle.json
tests/parity/: npy.h  test_glm4_paged_engine.cpp  test_granite_paged_engine.cpp  test_llama_paged_engine.cpp  test_mistral_paged_engine.cpp  test_npy.cpp  test_olmo2_paged_engine.cpp  test_olmo3_paged_engine.cpp  test_op_parity.cpp  test_phi3_paged_engine.cpp  test_qwen27_paged_engine.cpp  test_qwen36_gguf_engine.cpp  test_qwen36_paged_engine.cpp  test_qwen3_paged_engine.cpp
tests/parity/goldens/causal_conv1d_fwd_f32_realdims/: conv_state_in.npy  conv_state_out.npy  manifest.json  out.npy  query_start_loc.npy  weight.npy  x.npy
tests/parity/goldens/causal_conv1d_fwd_f32_small/: conv_state_in.npy  conv_state_out.npy  manifest.json  out.npy  weight.npy  x.npy
tests/parity/goldens/causal_conv1d_update_f32_realdims/: conv_state_in.npy  conv_state_out.npy  manifest.json  out.npy  weight.npy  x.npy
tests/parity/goldens/causal_conv1d_update_f32_small/: conv_state_in.npy  conv_state_out.npy  manifest.json  out.npy  weight.npy  x.npy
tests/parity/goldens/deepseek_v2_greedy/: greedy_dist.npy  greedy_ids.npy  neartie_gap_mnats.npy  our_ids.npy  p0_prompt.i32  p1_prompt.i32  p2_prompt.i32  p3_prompt.i32  p4_prompt.i32  p5_prompt.i32  p6_prompt.i32  p7_prompt.i32
tests/parity/goldens/dense_attention_f32_realdims/: attn.npy  gate.npy  k.npy  out.npy  (+5 more)
tests/scripts/: test_agent_record.py  test_check_model_checklist.py  test_check_readme_structure.py  test_device_leakage.py  test_doc_checkpoint.py  test_triton_aot_drift.sh
tests/tools/: __init__.py  test_async_credit_summary.py  test_drop_file_cache.py  test_gdn_ba_trace_summary.py  test_gdn_packed_component.py  test_gdn_packed_trace_summary.py  test_low_batch_trace_summary.py  test_online_gate_client.py  test_online_gate_summary.py  test_online_gate_trace.py  test_process_memory_sampler.py  test_serve_low_client.py  test_serve_low_corpus.py  test_serve_low_summary.py  test_serve_low_token_ids.py  test_vllm_closed_loop_metrics.py
tests/vllm/: gguf_builder.h  pretokenizer_goldens.inc  test_bpe.cpp  test_ct_nvfp4_emulation.cpp  test_detokenizer.cpp  test_engine_types.cpp  test_gguf.cpp  test_gguf_dequant.cpp  test_gguf_keep_quant.cpp  test_gguf_qwen36_loader.cpp  test_hf_config.cpp  test_model_loader_gguf.cpp  test_nvfp4_dequant.cpp  test_outputs.cpp  test_pretokenizer.cpp  test_qwen36_weights.cpp  test_request.cpp  test_safetensors.cpp  test_sampling_params.cpp  test_scheduler_config.cpp  test_tokenizer_parity.cpp  test_tokenizer_parity_deepseek.cpp  test_tokenizer_parity_mistral.cpp  test_unicode_data.cpp  test_version.cpp
tests/vllm/entrypoints/: test_chat_template.cpp  test_loaded_engine_dense.cpp
tests/vllm/models/: test_decode_graph_sizes.cpp  test_deepseek_v2_forward.cpp  test_deepseek_v2_load.cpp  test_deepseek_v2_paged_engine.cpp  test_gemma2_forward.cpp  test_gemma2_load.cpp  test_gemma3_forward.cpp  test_gemma3_load.cpp  test_gemma4_honesty.cpp  test_gemma_forward.cpp  test_gemma_load.cpp  test_glm4_moe_lite_load.cpp  test_glm4_moe_lite_paged_engine.cpp  test_llama_forward.cpp  test_llama_load.cpp  test_lmcache_output_invariance.cpp  test_mistral_forward.cpp  test_mistral_load.cpp  test_model_registry.cpp  test_opt_load.cpp  test_opt_paged_engine.cpp  test_qwen27_dense_forward.cpp  test_qwen27_paged_forward.cpp  test_qwen35_paged_forward.cpp  test_qwen35_plain_weights.cpp  test_qwen3_32b_nvfp4a16_load.cpp  test_qwen3_32b_nvfp4a16_paged_engine.cpp  test_qwen3_forward.cpp  test_qwen3_load.cpp  test_qwen3_moe_forward.cpp  test_qwen3_moe_load.cpp  test_qwen3coder_paged_engine.cpp
tests/vllm/v1/: test_async_admission_timing.cpp  test_async_llm.cpp  test_async_scheduler.cpp  test_block_pool.cpp  test_engine_core.cpp  test_engine_core_proc.cpp  test_input_processor.cpp  test_kv_cache_coordinator.cpp  test_kv_cache_interface.cpp  test_kv_cache_manager.cpp  test_kv_cache_utils.cpp  test_kv_offload_connector.cpp  test_kv_offload_cpu.cpp  test_kv_offload_fs.cpp  test_kv_offload_tiering.cpp  test_llm_engine.cpp  test_none_hash_determinism.cpp  test_output_processor.cpp  test_prefix_cache_stats.cpp  test_request_queue.cpp  test_sched_output.cpp  test_scheduler.cpp  test_scheduler_wave.cpp  test_single_type_kv_cache_manager.cpp
tests/vt/: test_arena.cpp  test_backend.cpp  test_backend_cross_device.cpp  test_conv_update_fast.cpp  test_cpu_threadpool.cpp  test_cuda_backend.cpp  test_cuda_ops.cpp  test_cuda_smoke.cpp  test_dropin_abi.cpp  test_dtype.cpp  test_fp4_quant_fast.cpp  test_fp8_plan_cache.cpp  test_fused_chain_additivity.cpp  test_gdn_packed_decode_triton.cpp  test_gdn_packed_reg_tile.cpp  test_gdn_prefill_conv.cpp  test_gemm_algo_log.cpp  test_graph_safe_scratch.cpp  test_metal_backend.cpp  test_nvfp4_persistent_cache.cpp  test_op_provider.cpp  test_ops_activation.cpp  test_ops_attention.cpp  test_ops_attn_preamble.cpp  test_ops_fp8_cutlass.cpp  test_ops_fp8_matmul.cpp  test_ops_fused_chain.cpp  test_ops_gdn.cpp  test_ops_glue.cpp  test_ops_layernorm.cpp  test_ops_matmul.cpp  test_ops_matmul_elem.cpp  test_ops_mla_absorb.cpp  test_ops_mla_attn.cpp  test_ops_mla_cache.cpp  test_ops_mla_chunked_context.cpp  test_ops_mla_prefill.cpp  test_ops_moe.cpp  test_ops_moe_grouped.cpp  test_ops_moe_grouped_bf16.cpp  (+19 more)
(+1384 files in other folders)
